# mycandyshop

./: README.md  compose.yaml
Backend/microservices-eda/ProductService/consumer/: .env  Dockerfile_consumer.dev  events_pb2.py  main_consumer.py  pyproject.toml  settings.py
Backend/microservices-eda/ProductService/producer/: .env  Dockerfile_producer.dev  events.proto  main_producer.py  pyproject.toml  settings.py
Backend/microservices-eda/UserService/: .env  Dockerfile.dev  UserManagement.py  pyproject.toml  settings.py
Backend/services/ProductService/: .env  Dockerfile.dev  main.py  pyproject.toml  settings.py
kong/: kong.yaml
